# Frame2.0

./: .devlog-template.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AKV-setup.md  BRP.tsx  CLAUDE.md  DOCX_SERVICE_DESIGN.md  Dockerfile  FRAME3_Modernized_Architecture.html  MetricsModal.tsx  REVIEWERS.md  RepoGraph_KodeKnowledge_Glassmorphism.pptx  brp.ts  docker-compose.yml  gitlab-agent-blueprint.html  index.html  mandatoryPrompt.ts  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: adr.md  devlog.md
.claude/hooks/: pre-bash-protect-paths.sh  pre-edit-protect-paths.sh  stop-typecheck.py
.powerstack4/: context-snapshot.md  findings.md  progress.md  reasoning.md  task_plan.md  tasks.md
.taskmaster/: config.json
Business Expense Management Tool/: README.md
Theme/: ~$S_Theme_Instructions.docx
UI_Prototype fo reference/: README.md  index.html
backend/docmining/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/docmining/app/: main.py
backend/docmining/app/api/v1/: documents.py
backend/docmining/app/core/: config.py
backend/docmining/app/services/: docling_service.py
backend/docmining/tests/: test_convert.py  test_convert_error_paths.py
backend/docmining/tests/fixtures/: sample.txt
backend/export/: pyproject.toml
backend/export/app/: main.py
backend/export/app/api/v1/: export.py
docs/: ARCHITECTURE.md  Epic_Generator_V5_Feature_Spec.docx  FRAME-Product-Overview.html  UBS_Theme_Instructions.docx  template_api_specification_feedback.md  template_architecture_decision_record_feedback.md  template_business_requirement_feedback.md  template_feature_specification_feedback.md  template_general_feedback.md  template_infrastructure_design_feedback.md  template_integration_spec_feedback.md  template_lightweight_rfc_feedback.md  template_migration_plan_feedback.md  template_technical_design_feedback.md
ref-file/: Epic-Generator-v5-BRD.md  Epic-Generator-v5-Task-Plan.md  v4-package-reference.json
scripts/: build-deploy.sh  claude-llm-proxy.mjs  verify-docmining-stack.sh
src/: App.test.tsx  App.tsx  FederatedApp.tsx  main.tsx
src/domain/: brp.ts  (+22 more)
(+575 files in other folders)
