[project]
name = "frame-docmining"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6",
  "docling==2.90.0",
  "python-multipart>=0.0.12",
  # RapidOCR's default inference engine. Docling 2.90 does not declare it,
  # but PDFs with OCR enabled fail with ImportError without it.
  "onnxruntime>=1.19,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
